Calendar: Fix events not showing

--- a/x2engine/js/fullcalendar-1.6.1/fullcalendar/fullcalendar.css
+++ b/x2engine/js/fullcalendar-1.6.1/fullcalendar/fullcalendar.css
@@ -278,9 +278,7 @@ a.fc-event,
 	overflow: hidden;
 	}
 	
-.fc-event-time {
-	padding: 1 1px;
-	}
+.fc-event-time,
 .fc-event-title {
 	padding: 0 1px;
 	}
